# SecureValueRecovery2

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  SECURITY.md  check_copyrights.sh
.github/: dependabot.yml
.github/workflows/: push.yml  test.yml
docker/: Dockerfile  apt.conf  build_eif.sh  check_hash.sh  clang+llvm-11.1.0-x86_64-linux-gnu-ubuntu-20.10.tar.xz.sha256  ms.sources.list  nitro_start.sh  sample_sgx_default_qcnl_azure.conf  sgx.sources.list  sgx_default_qcnl_azure.conf  sgx_runtime_libraries.sh  sources.list
docs/: Healing.md  Messages.md  svr2.tla
docs/svr3spec/: .gitignore  README.md  svr3.bib  svr3.tex
enclave/: .gitignore  Makefile  Makefile.HOST  Makefile.NSM  Makefile.SGX  Makefile.TEST  Makefile.X86  Makefile.base  Makefile.subdir  README.md  find_header.sh  svr2.conf  svr2_Standard_DC2s_v3.conf  svr2_medium.conf  svr2_small.conf  svr2_test.conf  test_deps.sh
enclave/core/: core.h  (+2 more)
host/: .gitignore  Makefile  README.md  enclave.config.sample  go.mod  go.sum  host.config.sample  main.go
host/integration/rustclient/: Cargo.toml  build.rs  proto  target
host/integration/rustclient/src/: main.rs
host/rustclient/: Cargo.toml  build.rs  proto  rustclient_test.go  target
host/rustclient/src/: main.rs
shared/: .gitignore  svr2.edl
trustedimage/: .gitignore  Makefile  README.md  azure.sh  azure_config.example  azure_copy_blob.sh  debian1.json  debian1.pkr.hcl  debian2.json  debian2.pkr.hcl  debian3.json  debian3.pkr.hcl  gcp.sh  gcp_config.example  template.pkr.hcl  verify_gcpsnp_release.sh
(+358 files in other folders)
