[package]
name = "rustclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snow = "0.9.6"
websocket = "0.27.1"
prost = "0.13.1"
simple-error = "0.3.1"
rand = "0.8.5"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"

[build-dependencies]
prost-build = "0.13.1"
